# finalprojectinfret

./: .gitignore  ProyectoF.txt  README.md  SimilitudCoseno.cabal  cabal.project  doc.tex  presentación.tex  run.sh  runP.sh  table0.tex  table1.tex  table2.tex
app/: SimilitudCoseno.hs
src/: Glue.hs  IndexRep.hs  PrepTexts.hs  Preprocess.hs  Stopwords.hs
